--- a/themes/maw/sass/global/_resets.scss
+++ b/themes/maw/sass/global/_resets.scss
@@ -44,7 +44,6 @@ h4, h5, h6 {
   font-weight: normal;
   text-align: center;
 }
-.contact b { font-family: "MAW", sans-serif!important; }
 
 a { text-decoration: none!important; }
 
