--- a/themes/maw/sass/template/_index.scss
+++ b/themes/maw/sass/template/_index.scss
@@ -12,6 +12,7 @@
     h1 {
       font-size: 60px;
       text-shadow: 0 0 10px #000;
+      text-transform: lowercase;
     }
   }
   .wrap {
